k8s2/base/sso-static-content/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: sso-static-content
spec: {}
