k8s2/base/sso-static-content/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: sso-static-content
spec: {}
status:
  loadBalancer: {}
